[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rendergitPlus"
version = "0.3.0"
description = "Flatten a Git repository into a single static HTML page for fast skimming and Ctrl+F"
readme = "README.md"
license = "0BSD"
authors = [
    { name = "Andrej Karpathy" },
    { name = "Sohil876", email = "sohil876@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.45",
    "htmlmin>=0.1.12",
    "markdown>=3.9",
    "pygments>=2.19.2",
    "python-minifier>=3.0.0",
    "rcssmin>=1.2.1",
    "rjsmin>=1.2.4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
rendergitplus = "rendergitplus:main"

[project.urls]
Homepage = "https://github.com/Sohil876/rendergitPlus"
Repository = "https://github.com/Sohil876/rendergitPlus"
